Fix height and gaps

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,15 @@
 
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+    background: transparent;
+    font-size: 16px;
+}
+
+
 header {
     background-color: var(--light-blue);
     color: var(--dark-blue);
@@ -24,9 +33,20 @@ nav {
     color: var(--dark-orange);
 }
 
+nav ul li, nav ul li a {
+    font-size: 2rem;
+}
+
 h1 {
     color: var(--dark-green);
     background-color: var(--light-green);
+    font-size: 10rem;
+}
+
+h2 {
+    margin-top: 0;
+    padding-top: 1.5rem;
+    font-size: 3rem;
 }
 
 img {
@@ -35,17 +55,21 @@ img {
 
 #about {
     background-color: var(--light-orange);
+    height: 50vh;
 }
 
 #certifications {
     background-color: var(--light-purple);
+    height: 50vh;
 }
 
 #projects {
     background-color: var(--light-pink);
+    height: 75vh;
 }
 
 footer {
     background-color: var(--light-green);
+    height: 25vh;
 }
 /*orange purple pink green*/
